--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -38,7 +38,8 @@ window#waybar {
 #custom-menu,
 #custom-screenrecording-indicator,
 #custom-update,
-#custom-power {
+#custom-power,
+#custom-notification {
   min-width: 12px;
   margin: 0 6px;
 }
